<resources>
    <string name="app_name">MarketDillo</string>
    <string name="hint_correo">Correo</string>
    <string name="hint_correo2">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password2">Confirmar contraseña</string>
    <string name="button_login">Iniciar Sesión</string>
    <string name="crear_cuenta">¿No tienes cuenta? Crea una:</string>
    <string name="crear_cuenta2">Crear Cuenta</string>
    <string name="hint_nombres">Nombres</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_celular">Celular</string>
    <string name="hint_didentidad">Documento de identidad</string>
    <string name="hint_fechanacimiento">Fecha de nacimiento</string>
    <string name="hint_direccion">Dirección de entrega</string>
    <string name="hint_direccion2">Dirección de tu finca</string>
    <string name="hint_mercadillo">Dale un nombre a tu Mercadillo</string>
    <string name="hint_tiempoaprox">Tiempo aproximado de entrega</string>
    <string name="hint_numtelefonico">Ingresa tu numero de celular</string>
    <string name="hint_ingrescode">Ingresa el código recibido</string>
    <string name="tx_productor">¿<u>Eres</u> <u>productor</u>?</string>
    <string name="tx_comprador">¿<u>Eres</u> <u>comprador</u>?</string>
    <string name="txt_unete">Únete ya a <u>MerkatDillo!</u></string>
    <string name="txt_observar">Mira los productos de nuestros campesinos</string>
    <string name="txt_registrar">Comienza registrando tu datos</string>
    <string name="title_activity_mercadillos">Mercadillos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_cerrarsesion">Cerrar Sesión</string>
    <string name="button_guardar">Guardar</string>
    <string name="ingresartelefono"><u>Ingresa</u> <u>con</u> <u>tu</u> <u>teléfono</u></string>
    <string name="button_siguiente">Siguiente</string>
    <string name="terminos">TÉRMINOS Y CONDICIONES</string>
    <string name="olvidaste"><u>¿Olvidaste</u> <u>algo?</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_vista_productos_mercadillo">VistaProductosMercadillo</string>
    <string name="title_activity_ejemplo">ejemplo</string>
    <string name="title_activity_vista_campesino">VistaCampesino</string>
    <string name="title_home">Inicio</string>
    <string name="title_vitrina">Vitrina</string>
    <string name="title_start">Empezar</string>
    <string name="default_notification_channel_id">CH_01</string>
    <string name="title_activity_phone">PhoneActivity</string>
    <string name="title_activity_vista_admin">VistaAdmin</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_example3">example3</string>
    <string name="contactanos"><u>Contáctanos</u></string>


</resources>
