<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CrearPhoneCampesinoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.Guideline
                android:id="@+id/glh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <android.support.constraint.Guideline
                android:id="@+id/glv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/textoreg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/txt_registrar"
                android:textColor="@color/colorPrimary2"
                android:textSize="@dimen/tamañotexto2"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/glh"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/laynom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/glh">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etnombres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/hint_nombres"
                    android:inputType="textPersonName"
                    android:textSize="17sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/laynom">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etapellidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/hint_apellidos"
                    android:inputType="textPersonName"
                    android:textSize="17sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/laycel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layape">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etcelular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/hint_celular"
                    android:text="+57"
                    android:inputType="phone"
                    android:textSize="17sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layfec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/laycel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etfechanacimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/hint_fechanacimiento"
                    android:inputType="date"
                    android:textSize="17sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layfec">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etdidentidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/hint_didentidad"
                    android:inputType="number"
                    android:textSize="17sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/laydir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layide">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etdireccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/hint_direccion2"
                    android:inputType="text"
                    android:textSize="17sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/laymer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/laydir">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etmercadillo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/hint_mercadillo"
                    android:inputType="text"
                    android:textSize="17sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/laytie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/laymer">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ettiempoaprox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/hint_tiempoaprox"
                    android:inputType="text"
                    android:textSize="17sp" />


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bnsiguiente"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="100dp"
                android:clickable="true"
                android:enabled="false"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/button_siguiente"
                android:theme="@style/RaisedButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/laytie" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>